k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gophprofile-server
  namespace: gophprofile
  labels:
    app: gophprofile-server
spec:
  selector:
    app: gophprofile-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
